setting up env variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 
+spring.profiles.active=${PROFILE:prod}
