--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
 			<artifactId>postgresql</artifactId>
 
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>2.3.2</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
