--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.3.5</version>
 		</dependency>
-		<!-- Google Api Dependecies-->
+		<!-- Google Api Dependencies-->
 		<dependency>
 			<groupId>com.google.apis</groupId>
 			<artifactId>google-api-services-youtube</artifactId>
