--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 
 spring.profiles.active=${PROFILE:prod}
+API_PASSWORD=${API_KEY}
